S’han afegit capçaleres ordenables als llistats d’usuaris, matèries primeres i lots, permetent ordenar les dades de forma ascendent, descendent o tornar a l’ordre per defecte. També s’han actualitzat els services, controllers, plantilles Thymeleaf i estils globals necessaris per mantenir el comportament i el disseny coherents amb el projecte.